--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -154,6 +154,34 @@
                                   Chiamiamo questo risultato di sovrapposizioni <b>risposta in frequenza</b>.
                                   <br>
                                   <br>
+                                  Nel grafico della risposta in frequenza possiamo notare dei picchi di risonanza in prossimità delle frequenze appartenenti alla serie armonica.
+                                </p>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
+
+                  <!-- Image-->
+                        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                            <div class="container-fluid">
+                                <div class="row justify-content-center">
+                                    <div class="col-12 col-lg-5">
+                                        <div class="image-wrapper">
+                                            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/05_grafico_risposta_in_frequenza.png" alt="www.gabrielavelitch.com">
+                                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Grafico risposta in frequenza</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
+                        <!-- Text-->
+                        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-12 col-lg-8">
+                                        <p class="mbr-text mbr-fonts-style display-7">
                                   Questo sistema risulta valido quando il nostro spazio somiglia ad esso, possiamo dunque applicarlo in gallerie, grandi garage (considerando soffitto e pavimento in quanto le pareti sono molto lontane).
                                   Qualsiasi sistema lineare tempo invariante si può esprimere attraverso la funzione della risposta all'impulso. La risposta all'impulso è l'uscita del sistema quando gli diamo in ingresso una funzione matematica che si chiama <b>impulso di dirac</b>.
                                 </p>
