--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -151,7 +151,7 @@
                                   Andando così avanti, otteniamo una famiglia di modi naturali, per i quali la frequenza associata ad ognuno è uguale a <b>fn = n * f1</b>.
                                   Analizzando questo metodo deduciamo che le frequenze di un ipotetico suono che sono in relazione alla famiglia armonica del sistema durano più a lungo nel tempo, tutte le frequenze che invece non ne fanno parte si estinguono in minor tempo in quanto non soddisfano i vincoli delle due pareti.
                                   Il risultato della sovrapposizione di tutte queste onde stazionarie armoniche, considerando il teorema di Fourier, sarà un segnale periodioco, cioè armonico e cioè dotato di intonazione (pitch).
-                                  Chiamiamo questo risultato di sovrapposizioni <b>risposta in frequenza</b>.
+                                  Chiamiamo questo risultato di sovrapposizioni <b>risposta in frequenza h(t)</b>.
                                   <br>
                                   <br>
                                   Nel grafico della risposta in frequenza possiamo notare dei picchi di risonanza in prossimità delle frequenze appartenenti alla serie armonica.
@@ -183,7 +183,9 @@
                                     <div class="col-md-12 col-lg-8">
                                         <p class="mbr-text mbr-fonts-style display-7">
                                   Questo sistema risulta valido quando il nostro spazio somiglia ad esso, possiamo dunque applicarlo in gallerie, grandi garage (considerando soffitto e pavimento in quanto le pareti sono molto lontane).
-                                  Qualsiasi sistema lineare tempo invariante si può esprimere attraverso la funzione della risposta all'impulso. La risposta all'impulso è l'uscita del sistema quando gli diamo in ingresso una funzione matematica che si chiama <b>impulso di dirac</b>.
+                                  Qualsiasi sistema lineare tempo invariante si può esprimere attraverso la funzione della risposta all'impulso. La risposta all'impulso è l'uscita del sistema quando gli diamo in ingresso una funzione matematica particolare che si chiama <b>impulso di dirac</b>.
+                                  L'impulso per definizione è una funzione matematica che rispetto all'operazione di convoluzione è come se fosse neutra, quindi è come se valesse 1.
+                                  Quando faccio una convoluzione tra un impulso di dirac e la risposta all'impulso ottengo la risposta all'impulso <b>i(t) * h(t) = h(t)</b>.
                                 </p>
                               </div>
                           </div>
