--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -185,7 +185,8 @@
                                   Questo sistema risulta valido quando il nostro spazio somiglia ad esso, possiamo dunque applicarlo in gallerie, grandi garage (considerando soffitto e pavimento in quanto le pareti sono molto lontane).
                                   Qualsiasi sistema lineare tempo invariante si può esprimere attraverso la funzione della risposta all'impulso. La risposta all'impulso è l'uscita del sistema quando gli diamo in ingresso una funzione matematica particolare che si chiama <b>impulso di dirac</b>.
                                   L'impulso per definizione è una funzione matematica che rispetto all'operazione di convoluzione è come se fosse neutra, quindi è come se valesse 1.
-                                  Quando faccio una convoluzione tra un impulso di dirac e la risposta all'impulso ottengo la risposta all'impulso <b>i(t) * h(t) = h(t)</b>.
+                                  Quando faccio una convoluzione tra un impulso di dirac e la risposta all'impulso ottengo la risposta all'impulso: <b>i(t) * h(t) = h(t)</b>.
+                                  La risposta all'impulso in sostanza è la funzione che mi permette di sondare tutte le proprietà di quel sistema e di ritrovarmele in uscita.
                                 </p>
                               </div>
                           </div>
