--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -187,6 +187,8 @@
                                   L'impulso per definizione è una funzione matematica che rispetto all'operazione di convoluzione è come se fosse neutra, quindi è come se valesse 1.
                                   Quando faccio una convoluzione tra un impulso di dirac e la risposta all'impulso ottengo la risposta all'impulso: <b>i(t) * h(t) = h(t)</b>.
                                   La risposta all'impulso in sostanza è la funzione che mi permette di sondare tutte le proprietà di quel sistema e di ritrovarmele in uscita.
+                                  Bisogna ricordare che nel caso della risposta in frequenza di un ambiente, essa vale solo per quella specifica disposizione sorgente-emettitore usata in fase di analisi.
+                                  
                                 </p>
                               </div>
                           </div>
