--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -188,7 +188,7 @@
                                   Quando faccio una convoluzione tra un impulso di dirac e la risposta all'impulso ottengo la risposta all'impulso: <b>i(t) * h(t) = h(t)</b>.
                                   La risposta all'impulso in sostanza è la funzione che mi permette di sondare tutte le proprietà di quel sistema e di ritrovarmele in uscita.
                                   Bisogna ricordare che nel caso della risposta in frequenza di un ambiente, essa vale solo per quella specifica disposizione sorgente-emettitore usata in fase di analisi.
-                                  Cambiando questa disposizione, otterrei una risposta all'impulso differente.
+                                  Cambiando questa disposizione, otterrò sempre risposte all'impulso differenti.
                                 </p>
                               </div>
                           </div>
