--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -189,6 +189,12 @@
                                   La risposta all'impulso in sostanza è la funzione che mi permette di sondare tutte le proprietà di quel sistema e di ritrovarmele in uscita.
                                   Bisogna ricordare che nel caso della risposta in frequenza di un ambiente, essa vale solo per quella specifica disposizione sorgente-emettitore usata in fase di analisi.
                                   Cambiando questa disposizione, otterrò sempre risposte all'impulso differenti.
+                                  <br>
+                                  <br>
+                                  Data la risposta all'impulso, attraverso la <b>trasformata di Laplace</b>, posso derivare la <b>funzione di trasferimento del filtro H(s)</b>.
+                                  Questa (s) è una variabile complessa definita nel dominio di Laplace. Dentro di sè questa funzione di trasferimento ha tutte le informazioni che ha la risposta all'impulso, soltanto che viene vista in un dominio diverso, un dominio trasformato.
+                                  Nel momento in cui calcoliamo questa funzione per una direzone partiolare di questa variabile, cioè quando <b>s = jω</b>, otteniamo la <b>risposta in frequenza H(jω)</b>.
+                                  
                                 </p>
                               </div>
                           </div>
