--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -194,10 +194,11 @@
                                   Data la risposta all'impulso, attraverso la <b>trasformata di Laplace</b>, posso derivare la <b>funzione di trasferimento del filtro H(s)</b>.
                                   Questa (s) è una variabile complessa definita nel dominio di Laplace. Dentro di sè questa funzione di trasferimento ha tutte le informazioni che ha la risposta all'impulso, soltanto che viene vista in un dominio diverso, un dominio trasformato.
                                   Nel momento in cui calcoliamo questa funzione per una direzone partiolare di questa variabile, cioè quando <b>s = jω</b>, otteniamo la <b>risposta in frequenza H(jω)</b>.
-                                  La risposta in frequenza ci permette di visualizzare sia lo <b>spettro del modulo</b> sia lo <b>spettro della fase</b>. 
+                                  La risposta in frequenza ci permette di visualizzare sia lo <b>spettro del modulo</b> sia lo <b>spettro della fase</b>.
                                   <br>
                                   <br>
-
+                                  Ricavando la risposta in frequenza, in realtà taglio fuori tutta quella parte della funzione di trasferimento che riguarda il tempo, ovvero il transitorio di quel sistema.
+                                  Vogliamo dunque sottolineare che la risposta in frequenza ci restituisce il comportamento del filtro in condizioni stazionarie, cioè quando è passato un po di tempo e il sistema si è assestato.
                                 </p>
                               </div>
                           </div>
