--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -199,6 +199,10 @@
                                   <br>
                                   Ricavando la risposta in frequenza, in realtà taglio fuori tutta quella parte della funzione di trasferimento che riguarda il tempo, ovvero il transitorio di quel sistema.
                                   Vogliamo dunque sottolineare che la risposta in frequenza ci restituisce il comportamento del filtro in condizioni stazionarie, cioè quando è passato un po di tempo e il sistema si è assestato.
+                                  <br>
+                                  <br>
+                                  Ricapitolando, l'approccio allo studio di un ambiente attraverso l'analisi dei suoi modi naturali è vero e risulta valido per le condizioni di stazionarietà di quel sistema, cioè quando è passato un tempo sufficiente affinchè la famiglia di onde stazionarie si è stabilita all'interno tra le due pareti.
+                                  Nella risposta all'impulso ho comunque tutte le informazioni del sistema, ma nel momento in cui ricavo la risposta in frequenza vedo solo quelle relative alla parte stazionaria del sistema.
                                 </p>
                               </div>
                           </div>
