--- a/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html
@@ -203,6 +203,11 @@
                                   <br>
                                   Ricapitolando, l'approccio allo studio di un ambiente attraverso l'analisi dei suoi modi naturali è vero e risulta valido per le condizioni di stazionarietà di quel sistema, cioè quando è passato un tempo sufficiente affinchè la famiglia di onde stazionarie si è stabilita all'interno tra le due pareti.
                                   Nella risposta all'impulso ho comunque tutte le informazioni del sistema, ma nel momento in cui ricavo la risposta in frequenza vedo solo quelle relative alla parte stazionaria del sistema.
+                                  <br>
+                                  <br>
+                                  Il profilo di filtraggio della risposta in frequenza viene chiamato <b>comb</b> in quanto assomiglia di fatto ad un pettine.
+                                  
+
                                 </p>
                               </div>
                           </div>
