--- a/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -148,7 +148,7 @@
                     Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
                     <br>
                     <br>
-                    Volessimo tradurre questa cosa in una relazione matematica, potremmo dire:
+                    Volessimo tradurre questi aspetti in una relazione matematica, potremmo dire:
                     <br>
                     <br>
                     <h3 style="text-align:center;">
@@ -190,16 +190,6 @@
                   </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
                     Questo modello è utile a descrivere diverse situazioni.
-                    <p>
-                      <br>
-                      <br>
-                      <h3>Variabili del segnale d'ingresso(x)</h3>
-                      <br>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                    Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
-                    però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
-                    che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani:
-                    <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>. Altro descrittore del <b>segnale(x)</b> è la <b>posizione della sorgente(ρ, α, θ)</b>.
                   </p>
                   </div>
               </div>
