--- a/pages/learn/acustica_degli_spazi_musicali/01_01_lo_spazio_come_un_filtro.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_lo_spazio_come_un_filtro.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Risposta in Frequenza</title>
+  <title>Lo Spazio Come un Filtro</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Risposta in Frequenza</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Lo Spazio Come un Filtro</strong></h4>
             </div>
         </div>
     </div>
@@ -90,96 +90,107 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7">
-                    Nel grafico della risposta in frequenza possiamo notare dei picchi di risonanza in prossimità delle frequenze appartenenti alla serie armonica.
-                  </p>
-                </div>
+                <h3>Variabili del segnale d'ingresso(x)</h3>
+                <br>
+              <p class="mbr-text mbr-fonts-style display-7">
+              Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
+              però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
+              che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani:
+              <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>. Altro descrittore del <b>segnale(x)</b> è la <b>posizione della sorgente(ρ, α, θ)</b>.
+            </p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Image-->
-          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-              <div class="container-fluid">
-                  <div class="row justify-content-center">
-                      <div class="col-12 col-lg-5">
-                          <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/05_grafico_risposta_in_frequenza.png" alt="www.gabrielavelitch.com">
-                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Grafico risposta in frequenza</p>
-                          </div>
+<!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+          <div class="container-fluid">
+              <div class="row justify-content-center">
+                  <div class="col-12 col-lg-5">
+                      <div class="image-wrapper">
+                          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/03_sistema_polare.png" alt="www.gabrielavelitch.com">
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Sistema polare</p>
                       </div>
                   </div>
               </div>
-          </section>
-
-          <!-- Text-->
-          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-              <div class="container">
-                  <div class="row justify-content-center">
-                      <div class="col-md-12 col-lg-8">
-                          <p class="mbr-text mbr-fonts-style display-7">
-                    Questo sistema risulta valido quando il nostro spazio somiglia ad esso, possiamo dunque applicarlo in gallerie, grandi garage (considerando soffitto e pavimento in quanto le pareti sono molto lontane).
-                    Qualsiasi sistema lineare tempo invariante si può esprimere attraverso la funzione della risposta all'impulso. La risposta all'impulso è l'uscita del sistema quando gli diamo in ingresso una funzione matematica particolare che si chiama <b>impulso di dirac</b>.
-                    L'impulso per definizione è una funzione matematica che rispetto all'operazione di convoluzione è come se fosse neutra, quindi è come se valesse 1.
-                    Quando faccio una convoluzione tra un impulso di dirac e la risposta all'impulso ottengo la risposta all'impulso: <b>i(t) * h(t) = h(t)</b>.
-                    La risposta all'impulso in sostanza è la funzione che mi permette di sondare tutte le proprietà di quel sistema e di ritrovarmele in uscita.
-                    Bisogna ricordare che nel caso della risposta in frequenza di un ambiente, essa vale solo per quella specifica disposizione sorgente-emettitore usata in fase di analisi.
-                    Cambiando questa disposizione, otterrò sempre risposte all'impulso differenti.
-                  </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Video-->
-    <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-      <div class="container">
-          <div class="title-wrapper mb-5">
           </div>
-          <div class="row align-items-center">
-              <div class="col-12 col-lg-4 video-block">
-                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/lLUcOFwZvyY" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-              </div>
-              <div class="col-12 col-lg">
-                  <div class="text-wrapper">
-                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                          <strong>Testing The World's Longest Echo</strong>
-                      </h5>
-                      <p class="mbr-text mbr-fonts-style display-7">
+      </section>
 
-                      </p>
-                  </div>
-              </div>
-          </div>
-      </div>
-    </section>
 
-    <!-- Text-->
+<!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12 col-lg-8">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                    Data la risposta all'impulso, attraverso la <b>trasformata di Laplace</b>, posso derivare la <b>funzione di trasferimento del filtro H(s)</b>.
-                    Questa (s) è una variabile complessa definita nel dominio di Laplace. Dentro di sè questa funzione di trasferimento ha tutte le informazioni che ha la risposta all'impulso, soltanto che viene vista in un dominio diverso, un dominio trasformato.
-                    Nel momento in cui calcoliamo questa funzione per una direzone partiolare di questa variabile, cioè quando <b>s = jω</b>, otteniamo la <b>risposta in frequenza H(jω)</b>.
-                    La risposta in frequenza ci permette di visualizzare sia lo <b>spettro del modulo</b> sia lo <b>spettro della fase</b>.
-                    <br>
-                    <br>
-                    Ricavando la risposta in frequenza, in realtà taglio fuori tutta quella parte della funzione di trasferimento che riguarda il tempo, ovvero il transitorio di quel sistema.
-                    Vogliamo dunque sottolineare che la risposta in frequenza ci restituisce il comportamento del filtro in condizioni stazionarie, cioè quando è passato un po di tempo e il sistema si è assestato.
-                    <br>
-                    <br>
-                    Ricapitolando, l'approccio allo studio di un ambiente attraverso l'analisi dei suoi modi naturali è vero e risulta valido per le condizioni di stazionarietà di quel sistema, cioè quando è passato un tempo sufficiente affinchè la famiglia di onde stazionarie si è stabilita all'interno tra le due pareti.
-                    Nella risposta all'impulso ho comunque tutte le informazioni del sistema, ma nel momento in cui ricavo la risposta in frequenza vedo solo quelle relative alla parte stazionaria del sistema.
-                    <br>
-                    <br>
-                    Il profilo di filtraggio della risposta in frequenza viene chiamato <b>comb</b> in quanto assomiglia di fatto ad un pettine.
-                  </p>
-                </div>
+          <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
+              Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
+              <ul>
+              <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
+              <li><b>(ρ, α, θ)posizione della sorgente</b></li>
+              <li><b>(ρ)modulo</b></li>
+              <li><b>(α)azimut</b></b></li>
+              <li><b>(θ)zenit</b></li>
+            </ul>
+              <p class="mbr-text mbr-fonts-style display-7">
+                Possiamo dunque descrivere la <b>(x)</b> con la seguente espressione:
+                <br>
+                <br>
+                <h3 style="text-align:center;">
+                <b>x = t, 𐌘(α, θ), (ρ, α, θ)</b>
+              </h3>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+
+              <!-- Text-->
+                  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                      <div class="container">
+                        <div class="row justify-content-center">
+                          <div class="col-md-12 col-lg-8">
+                            <h3><br>Variabili del sistema(h) e dell'uscita(y)</h3>
+                                <p class="mbr-text mbr-fonts-style display-7">
+                                  <br>
+              La funzione di tasferimento di questo sistema dipende dalla <b>forma dello spazio (G(ρ, α, θ))</b> e dai <b>materiali (M(ρ, α, θ))</b>.
+              Convolvendo il <b>sistema(h)</b> con <b>l'ingresso(x)</b>, otteniamo <b>l'uscita(y)</b> che possiamo descrivere in questo modo:
+              <br>
+              <br>
+              <h4 style="text-align:center;">
+              <b>y = t, Γ(α, θ), (ρ, α, θ) = h (G(ρ, α, θ), M(ρ, α, θ)) * x (t, 𐌘(α, θ), (ρ, α, θ))</b>
+            </h4>
+            <br>
+            <br>
+            <ul>
+            <li><b>(Γ)funzione di sensibilità che descrive la ricettività</b></li>
+            <li><b>(G)forma dello spazio</b></li>
+            <li><b>(M)materiali</b></li>
+          </ul>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Tutto questo è per far capire che da un punto di vista di modello,
+            <b>lo spazio di fatto si comporta come un filtro</b>:
+            prende in ingresso un segnale in un certo punto dello spazio e lo restituisce in uscite in un altro punto dello spazio.
+            <br>
+            <br>
+            Il problema è che questo sistema è funzione di talmente tante variabili che affrontarne lo studio è una cosa delicata e soprattutto va tratto con diversi livelli di approssimazione
+             e di precisione.
+             <br>
+             <br>
+             Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricevitore.
+             Possiamo dire che lo spazio è come un filtro con infinite possibilità di risposta all'impulso.
+             Agendo con una sola coppia di emettitore-ricevitore otteniamo la risposta all'impulso per quel tipo di immagine.
+             Spostando di poco uno dei due, la risposta all'impulso risulterebbe diversa.
+             La risposta all'impulso è una delle tante mappe possibili di un determinato spazio.
+             <br>
+             <br>
+             Esistono software di progettazione acustica assistita, come <a href="http://www.ramsete.com/home.htm"><b>Ramsete</b></a> di Angelo Farina, che permettono di campionare la risposta all'impulso di più sorgenti e più ricevitori.
+             Essi vengono usati quando serve una progettazione più accurata, quale quella di un auditorium, in quanto si può ottenere la risposta all'impulso per ogni singola seduta.
+          </div>
+      </div>
+  </div>
+</section>
+
 
 
 <!-- Prev/Next-->
