--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -106,10 +106,11 @@
                     <ul>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html"><b>01. Come Affrontare lo Studio dell'Acustica degli Ambienti</b></a></li>
                       <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_tre_metodi_di_studio.html"><b>01.01. Tre Metodi di Studio</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html"><b>01.02. Tre Metodi di Studio</b></a></li>
                         <ul>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_01_modi_naturali.html"><b>01.01.01. Modi Naturali</b></a></li>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_02_risposta_in_frequenza.html"><b>01.01.02. Risposta in Frequenza</b></a></li>
+                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali.html"><b>01.02.01. Modi Naturali</b></a></li>
+                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_02_risposta_in_frequenza.html"><b>01.02.02. Risposta in Frequenza</b></a></li>
                     </ul>
                   </p>
               </div>
