--- a/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -189,123 +189,12 @@
                     <li><b>(y)uscita: convoluzione tra (x) e (h)</b></li>
                   </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Questo modello è utile a descrivere diverse situazioni.
+                    Questo modello è utile a descrivere diverse situazioni, quale per esempio un filtro o uno spazio.
                   </p>
                   </div>
               </div>
           </div>
       </section>
-
-      <!-- Image-->
-            <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-                <div class="container-fluid">
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-lg-5">
-                            <div class="image-wrapper">
-                                <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/03_sistema_polare.png" alt="www.gabrielavelitch.com">
-                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Sistema polare</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-      <!-- Text-->
-          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-              <div class="container">
-                <div class="row justify-content-center">
-                  <div class="col-md-12 col-lg-8">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                    Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
-                    <ul>
-                    <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
-                    <li><b>(ρ, α, θ)posizione della sorgente</b></li>
-                    <li><b>(ρ)modulo</b></li>
-                    <li><b>(α)azimut</b></b></li>
-                    <li><b>(θ)zenit</b></li>
-                  </ul>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                      Possiamo dunque descrivere la <b>(x)</b> con la seguente espressione:
-                      <br>
-                      <br>
-                      <h3 style="text-align:center;">
-                      <b>x = t, 𐌘(α, θ), (ρ, α, θ)</b>
-                    </h3>
-                  </div>
-              </div>
-          </div>
-      </section>
-
-
-                    <!-- Video-->
-                    <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-                      <div class="container">
-                          <div class="title-wrapper mb-5">
-                          </div>
-                          <div class="row align-items-center">
-                              <div class="col-12 col-lg-4 video-block">
-                                  <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/lLUcOFwZvyY" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-                              </div>
-                              <div class="col-12 col-lg">
-                                  <div class="text-wrapper">
-                                      <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                                          <strong>Testing The World's Longest Echo</strong>
-                                      </h5>
-                                      <p class="mbr-text mbr-fonts-style display-7">
-
-                                      </p>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                    </section>
-
-                    <!-- Text-->
-                        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
-                            <div class="container">
-                              <div class="row justify-content-center">
-                                <div class="col-md-12 col-lg-8">
-                                  <h3><br>Variabili del sistema(h) e dell'uscita(y)</h3>
-                                      <p class="mbr-text mbr-fonts-style display-7">
-                                        <br>
-                    La funzione di tasferimento di questo sistema dipende dalla <b>forma dello spazio (G(ρ, α, θ))</b> e dai <b>materiali (M(ρ, α, θ))</b>.
-                    Convolvendo il <b>sistema(h)</b> con <b>l'ingresso(x)</b>, otteniamo <b>l'uscita(y)</b> che possiamo descrivere in questo modo:
-                    <br>
-                    <br>
-                    <h4 style="text-align:center;">
-                    <b>y = t, Γ(α, θ), (ρ, α, θ) = h (G(ρ, α, θ), M(ρ, α, θ)) * x (t, 𐌘(α, θ), (ρ, α, θ))</b>
-                  </h4>
-                  <br>
-                  <br>
-                  <ul>
-                  <li><b>(Γ)funzione di sensibilità che descrive la ricettività</b></li>
-                  <li><b>(G)forma dello spazio</b></li>
-                  <li><b>(M)materiali</b></li>
-                </ul>
-                <p class="mbr-text mbr-fonts-style display-7">
-                  Tutto questo è per far capire che da un punto di vista di modello,
-                  <b>lo spazio di fatto si comporta come un filtro</b>:
-                  prende in ingresso un segnale in un certo punto dello spazio e lo restituisce in uscite in un altro punto dello spazio.
-                  <br>
-                  <br>
-                  Il problema è che questo sistema è funzione di talmente tante variabili che affrontarne lo studio è una cosa delicata e soprattutto va tratto con diversi livelli di approssimazione
-                   e di precisione.
-                   <br>
-                   <br>
-                   Per facilitare lo studio, nella formula presa in considerazione abbiamo omesso la variabile del movimento, sia della sorgente che del ricevitore.
-                   Possiamo dire che lo spazio è come un filtro con infinite possibilità di risposta all'impulso.
-                   Agendo con una sola coppia di emettitore-ricevitore otteniamo la risposta all'impulso per quel tipo di immagine.
-                   Spostando di poco uno dei due, la risposta all'impulso risulterebbe diversa.
-                   La risposta all'impulso è una delle tante mappe possibili di un determinato spazio.
-                   <br>
-                   <br>
-                   Esistono software di progettazione acustica assistita, come <a href="http://www.ramsete.com/home.htm"><b>Ramsete</b></a> di Angelo Farina, che permettono di campionare la risposta all'impulso di più sorgenti e più ricevitori.
-                   Essi vengono usati quando serve una progettazione più accurata, quale quella di un auditorium, in quanto si può ottenere la risposta all'impulso per ogni singola seduta.
-                </div>
-            </div>
-        </div>
-    </section>
 
 
 <!-- Prev/Next-->
