--- a/pages/learn/acustica_degli_spazi_musicali/layout - Copia - Copia.html
+++ b/pages/learn/acustica_degli_spazi_musicali/layout - Copia - Copia.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Tre Metodi di Studio</title>
+  <title>Il Concetto di Pregiudizio</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Tre Metodi di Studio</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
             </div>
         </div>
     </div>
@@ -86,30 +86,12 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
-                  <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify">
-                    Come si fa a studiare la risposta di uno spazio? I metodi più utilizzati sono tre:
-                    <ul style="text-justify: inter-word;">
-                      <li><b>Analisi ondulatoria o modale</b>: scrivo le equazioni differenziali del campo acustico, dopodichè le risolvo usando le condizioni a contorno che sono imposte dall'ambiente.
-                      Questo metodo si applica a sistemi semplici quali corda, tubo o parete. Con esso, conoscendo i vincoli dello spazio preso in analisi, riusciamo ad analizzarne le onde stazionarie.
-                    Questo tipo di approccio all'analisi di un ambiente richiede un ingente sforzo matematico, è dunque efficace in poche situazioni.</li>
-                    <br>
-                      <li><b>Approccio geometrico</b>: simile all'approccio di rendering di una immagine a tre dimensioni.
-                        Consiste nel considerare, anche nel campo acustico, l'energia come viaggiante secondo delle direzioni molto precise, in sostanza si suppone che il suono si comporti come la luce e attraverso dei software di simulazione si tenta di prevedere il comportamento del segnale nel sistema.
-                      Questa approssimazione è valida solo quando esiste una relazione frequenziale tra l'ambiente e il segnale.</li>
-                      <br>
-                      <li><b>Approccio del campo diffuso</b>: è un approccio statistico, si valuta il campo acustico attraverso l'ipotesi che passato un po di tempo dalle condizioni iniziali, l'energia si è diffusa e distribuita in maniera omogenea in tutto lo spazio e quindi si tirano fuori delle grandezze che descrivono il campo acustico in modo macroscopico.
-                      Per esempio, il tempo di riverberazione è una grandezza che non si preoccupa di valutare nel dettaglio quali sono le riflessioni, le interferenze, le diffrazioni di tutti i fronti d'onda del campo acustico,
-                     ma lo valuta in senso macroscopico, si occupa soltanto di capire qual'è la curva di decadimento delle energie in funzione del tempo, descrivendo dunque il campo acustico.
-                     Immaginate un fronte d'onda sferico che ad un punto incontra le pareti ed inizia a rilettersi e diffrangersi ovunque nello spazio, otteniamo una situazione ergodica in cui ogni particella è disposta in maniera uniforme in tutto lo spazio.
-                     In questa condizione posso dunque usare una visione macroscopica per l'analisi.
-                   </li>
-                    </ul>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Immaginiamo ora di avere una situazione più complessa rispetto a quella dei <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali.html"><b>modi naturali</b></a> tra due pareti riflettenti.
                   </p>
                 </div>
             </div>
@@ -123,8 +105,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
