--- a/pages/learn/acustica_degli_spazi_musicali/prova.html
+++ b/pages/learn/acustica_degli_spazi_musicali/prova.html
@@ -98,7 +98,8 @@
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
                     Immaginiamo ora di avere una situazione più complessa rispetto a quella dei <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali.html"><b>modi naturali</b></a> tra due pareti riflettenti.
-                    Nel nuovo caso abbiamo un parallelepipedo di 6 pareti o uno spazio di tre dimensioni di una forma qualunque. Prendiamo l'equazione del campo (tempo e tre dimensioni, nel caso delle pareti abbiamo il tempo e una sola dimensione)
+                    Nel nuovo caso abbiamo un parallelepipedo di 6 pareti. Possiamo anche qui applicare il ragionamento dei modi naturali precedentemente trattato nel caso delle pareti,
+                    ma se prima avevamo il tempo ed una dimensione, ora abbiamo esteso l'equazione del campo a tempo e tre dimensioni spaziali.
                   </p>
                 </div>
             </div>
