--- a/pages/learn/acustica_degli_spazi_musicali/prova.html
+++ b/pages/learn/acustica_degli_spazi_musicali/prova.html
@@ -100,11 +100,30 @@
                     Immaginiamo ora di avere una situazione più complessa rispetto a quella dei <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali.html"><b>modi naturali</b></a> tra due pareti riflettenti.
                     Nel nuovo caso abbiamo un parallelepipedo di 6 pareti. Possiamo anche qui applicare il ragionamento dei modi naturali precedentemente trattato nel caso delle pareti,
                     ma se prima avevamo il tempo ed una dimensione, ora abbiamo esteso l'equazione del campo a tempo e tre dimensioni spaziali.
+
+                    010100
+
+                    Usiamo l'applet <a href="https://www.falstad.com/modebox/"><b>ModeBox</b></a> di Falstad per visualizzare graficamente i modi di uno spazio cubico.
+                    Attraverso l'uso della matrice accendo i diversi modi naturali associato ad una coppia di pareti.
                   </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_I_modo_naturale.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra due pareti (visualizzazione grafica Applet Falstad)</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
 
     <script type="text/javascript">
 
