--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -109,8 +109,9 @@
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html"><b>01.02. Tre Metodi di Studio</b></a></li>
                         <ul>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali.html"><b>01.02.01. Modi Naturali</b></a></li>
+                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>01.02.01. Modi Naturali in Una Dimensione Spaziale</b></a></li>
                           <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_02_risposta_in_frequenza.html"><b>01.02.02. Risposta in Frequenza</b></a></li>
+                          <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html"><b>01.02.01. Modi Naturali in Tre Dimensioni Spaziali</b></a></li>
                     </ul>
                   </p>
               </div>
