--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -124,48 +124,19 @@
               </div>
           </section>
 
-    <script type="text/javascript">
-
-    ////J2S._checkLoad = true;
-
-    J2S._isAsync = false;
-
-    J2S.getProfile() // records repeat calls to overridden or overloaded Java methods
-
-    // use ?_USE=JAVA or _USE=SIGNED or _USE=HTML5
-
-    var app ;
-
-    jmol_isReady = function(applet) {
-    	J2S._getElement(applet, "appletdiv").style.border="1px solid blue"
-    	app = applet;
-    }
-
-    Info = {
-        code: "com.falstad.ModeBox",
-    	width: 660,
-    	height: 500,
-    	debug: false,
-    	color: "#F0F0F0",
-    	zIndexBase: 20000,
-    	z:{monitorZIndex:100},
-    	serverURL: "http://chemapps.stolaf.edu/jmol/jsmol/php/jsmol.php",
-    	use: "HTML5",
-    	j2sPath: "../swingjs/j2s",
-    	jarPath: "../swingjs/java",
-    //	jarFile: "JStest.jar",
-    	isSigned: false,
-    	disableJ2SLoadMonitor: false,
-    	disableInitialConsole: false,
-            useFrame:"false",
-    	readyFunction: jmol_isReady,
-            allowjavascript: true
-    }
-
-    SwingJS.getApplet("ModeBox", Info)
-
-    </script>
-
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            In questa immagine vediamo la prima onda stazionaria associata alla coppia (1, 0, 0), la stessa che avevamo raffigurato <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>qui</b></a>.
+                            Al centro abbiamo il nodo espresso con una linea nera, ai lati invece abbiamo i ventri relativamente di colore verde e rosso.
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
 
 <!-- Prev/Next-->
