--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -117,7 +117,7 @@
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
                               <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_I_modo_naturale.png" alt="www.gabrielavelitch.com">
-                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra due pareti (visualizzazione grafica Applet Falstad)</p>
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale tra due pareti (1, 0, 0)</p>
                           </div>
                       </div>
                   </div>
@@ -130,14 +130,27 @@
                   <div class="row justify-content-center">
                       <div class="col-md-12 col-lg-8">
                           <p class="mbr-text mbr-fonts-style display-7">
-                            In questa immagine vediamo la prima onda stazionaria associata alla coppia (1, 0, 0), la stessa che avevamo raffigurato <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>qui</b></a>.
-                            Al centro abbiamo il nodo espresso con una linea nera, ai lati invece abbiamo i ventri relativamente di colore verde e rosso.
+                            In questa immagine vediamo la prima onda stazionaria associata ad una coppia di pareti, la stessa che avevamo raffigurato <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_01_modi_naturali_in_una_dimesione_spaziale.html"><b>qui</b></a>.
+                            Al centro abbiamo il nodo espresso con una linea nera, ai lati invece abbiamo i ventri relativamente di colore verde e rosso. Questa rappresentazione corrisponde alla f1.
                           </p>
                         </div>
                     </div>
                 </div>
             </section>
 
+            <!-- Image-->
+                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                      <div class="container-fluid">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-5">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/06_II_modo_naturale.png" alt="www.gabrielavelitch.com">
+                                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Secondo modo naturale tra due pareti (2, 0, 0)</p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
