--- a/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_02_03_modi_naturali_in_tre_dimensioni_spaziali.html
@@ -159,12 +159,16 @@
                           <div class="row justify-content-center">
                               <div class="col-md-12 col-lg-8">
                                   <p class="mbr-text mbr-fonts-style display-7">
-                                    Qui invece vedimo la rappresentazione grafica corrispondente alla f2.
+                                    Qui invece vedimo la rappresentazione grafica corrispondente alla f2 (2, 0, 0). Gli indici tra parentesi rappresentano le 3 coppie di pareti.
+                                    
                                   </p>
                                 </div>
                             </div>
                         </div>
                     </section>
+
+
+
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
